--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 #Sat Apr 06 15:32:20 EET 2019
 MYSQL_DB_USERNAME=root
-MYSQL_DB_URL=jdbc\:mysql\://localhost\:3306/personalinfo
-MYSQL_DB_PASSWORD=salma
+MYSQL_DB_URL=jdbc\:mysql\://localhost\:3306/test
+MYSQL_DB_PASSWORD=root
